objects/NVMContactWorld__InteractionEvent__c.object
<CustomObject>
    <fields>
        <fullName>NVMContactWorld__AdditionalFieldValues__c</fullName>
        <label>Additional Field Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Interaction_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CallObjectIdentifier__c</fullName>
        <label>CallObjectIdentifier</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CustomObjectId__c</fullName>
        <label>Custom Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__IndexedCallObjectIdentifier__c</fullName>
        <externalId>true</externalId>
        <label>IndexedCallObjectIdentifier</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__InitialSearchResults__c</fullName>
        <label>Initial Search Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__IsPreCallEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If ticked, this event was created before the call actually started, and it indicates that the call should be related to the object indicated in the &quot;relatedTo&quot; field</description>
        <label>Is Pre Call Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__RelatedTask__c</fullName>
        <description>Related task</description>
        <externalId>true</externalId>
        <label>Related Task</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__RelatedTo__c</fullName>
        <label>Related To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__TimeStamp__c</fullName>
        <label>Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deliver</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Consult</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NVMContactWorld__What__c</fullName>
        <description>Other object types</description>
        <externalId>true</externalId>
        <label>What</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Who__c</fullName>
        <description>Contacts or Leads</description>
        <externalId>true</externalId>
        <label>Who</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Interaction Event</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interaction Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NVMContactWorld__Call_Object_Identifier_Deprecated</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(NVMContactWorld__CallObjectIdentifier__c)</errorConditionFormula>
        <errorMessage>CallObjectIdentifier field is no longer used. Use IndexedCallObjectIdentifier.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NVMContactWorld__Event_Type_Validation</fullName>
        <active>true</active>
        <description>Event Type must be one of 3 valid Types</description>
        <errorConditionFormula>!ISPICKVAL(NVMContactWorld__Type__c, &apos;Deliver&apos;) &amp;&amp; !ISPICKVAL(NVMContactWorld__Type__c, &apos;Transfer&apos;) &amp;&amp; !ISPICKVAL(NVMContactWorld__Type__c, &apos;Consult&apos;)</errorConditionFormula>
        <errorMessage>Event type must be either &apos;Deliver&apos;, &apos;Transfer&apos; or &apos;Consult&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NVMContactWorld__In_Call_Events_Must_Have_a_Timestamp</fullName>
        <active>true</active>
        <description>Only pre call events are allowed to have null timestamps</description>
        <errorConditionFormula>NVMContactWorld__IsPreCallEvent__c = false &amp;&amp; ISNULL(NVMContactWorld__TimeStamp__c)</errorConditionFormula>
        <errorMessage>Event must have a timestamp, unless it&apos;s a pre-call event</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NVMContactWorld__Pre_Call_Events_Must_Have_a_RelatedTo</fullName>
        <active>true</active>
        <description>Pre call events must have a &quot;RelatedTo&quot; field or they are useless</description>
        <errorConditionFormula>NVMContactWorld__IsPreCallEvent__c = true &amp;&amp; ((ISNULL(NVMContactWorld__What__c) || NVMContactWorld__What__c = &apos;&apos;) &amp;&amp; (ISNULL(NVMContactWorld__Who__c) || NVMContactWorld__Who__c = &apos;&apos;) &amp;&amp; (ISNULL(NVMContactWorld__RelatedTask__c) || NVMContactWorld__RelatedTask__c = &apos;&apos;))</errorConditionFormula>
        <errorMessage>A pre-call event must have a related object</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NVMContactWorld__RelatedTo_Field_Is_Deprecated</fullName>
        <active>true</active>
        <description>The RelatedTo field has been replaced by the Who and What fields.</description>
        <errorConditionFormula>!ISBLANK(NVMContactWorld__RelatedTo__c)</errorConditionFormula>
        <errorMessage>The RelatedTo field is deprecated and has been replaced by the Who and What.</errorMessage>
    </validationRules>
</CustomObject>